--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,32 @@ p {
   /* border: 3px solid red; */
   padding-left: 0%;
 }
+
+
+.movie-data {
+  border: 2px solid white;
+}
+
+.movie-data ul {
+  display: flex;
+  /* border: 3px solid red; */
+  padding-left: 0%;
+  justify-content: flex-start;
+  align-items: start;
+
+}
+
+.movie-data ul > li {
+  /* border: 3px solid pink; */
+  text-align: left;
+}
+
+#movie-li {
+  text-align: center;
+}
+
+#movie-image {
+  width: 90%;
+  padding-left: 0%;
+  text-align: center;
+}
