--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 80vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -7,114 +7,8 @@
   color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-
-li {
-  list-style: none;
-  margin-top: 1.5%;
-  font-size: 1.25vw;
-}
-
-.map-image {
-  border:3px solid white;
-}
-
-footer {
-  margin-top: 3%;
-}
-
 .modal {
   background-color: #FFCCBC;
   color: red;
 }
 
-p {
-  padding-top: 2%;
-  font-size: 2vw;
-}
-
-.forecast-data {
- border: 2px solid white;
- border-radius: 2vw;
- margin-top: 10%;
- 
-}
-
-.forecast-data-ul {
-  display: flex;
-  flex-direction: column;
-  /* border: 3px solid red; */
-  padding-left: 0%;
-}
-
-
-.movie-data {
-  border: 2px solid white;
-  border-radius: 2vw;
-}
-
-.movie-data ul {
-  display: flex;
-  /* border: 3px solid red; */
-  padding-left: 0%;
-  justify-content: flex-start;
-  align-items: start;
-
-}
-
-.movie-data ul > li {
-  /* border: 3px solid pink; */
-  text-align: left;
-}
-
-#movie-li {
-  text-align: center;
-}
-
-#movie-title {
-  text-align: center;
-  width: 100%;
-  /* border: 3px solid red; */
-  font-size: 2vw;
-}
-
-#movie-image {
-  width: 100%;
-  padding-left: 0%;
-  text-align: center;
-}
